--- a/challenge.Html
+++ b/challenge.Html
@@ -6,23 +6,26 @@
   <title>challenge two</title>
 </head>
 
-<div class="container">
+<!--div class="container"-->
 <article class="product">
   <h2 class="product-title">Converse Chuck Taylor All Star Low Top</h2>
   
-  <img src="challenges.jpg" alt="converse image" height="250px" width="250px">
+  <img src="challenges.jpg" alt="converse image" height="250px" width="250px" class="product-image">
+  <div class="product-info">
+<div class="product-price">
   <p class="price">
   <strong>$65.00 </strong>
   </p>
   <P class="shipping">
     Free shipping
   </P>
+</div>
   <p class="sale">sale</p>
-  <p>
+  <p class="produc-description">
     Ready to dress up or down. classic converse chucks are an everyday affordable staple
   </p>
   <a class="more-info" href="https://www.converse.com">More information &rarr;</a>
-<div class="color">
+<div class=" product-colors">
   <div class="color"></div>
 <div class="color color-blue"></div>
 <div class="color color-red"></div>
@@ -31,17 +34,19 @@
 <div class="color  color-brown"></div>
 
 </div>
-
+</div>
+<div class="product-details">
   <h3 class="details-title">product details</h3>
   <ul class="details-list">
     <li>Lightweight ,durable convas</li>
     <li>lightly padded forebed for addded comfort</li>  
     <li>iconic chunk taylor ankle patch</li>
   </ul>
+</div>
   <button class="add-cart">
     Add to cart
   </button>
 </article>
-</div>
+<!--/div-->
 </body>
 </html>
